--- a/biome.json
+++ b/biome.json
@@ -6,23 +6,39 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true,
       "style": {
-        "useFilenamingConvention": {
-          "level": "error",
-          "options": {
-            "format": "kebab-case"
-          }
-        }
-      },
-      "security": {
-        "noConsoleLog": "error"
+        "recommended": true,
+        "noVar": "error",
+        "noNegationElse": "error"
       },
       "suspicious": {
-        "noExplicitAny": "warn"
+        "recommended": true,
+        "noConsoleLog": "error",
+        "noExplicitAny": "warn",
+        "noImplicitAnyLet": "warn"
+      },
+      "complexity": {
+        "recommended": true,
+        "noForEach": "warn",
+        "useOptionalChain": "error"
+      },
+      "correctness": {
+        "recommended": true,
+        "noUnusedVariables": "error",
+        "useExhaustiveDependencies": "error"
       },
       "a11y": {
-        "useAltText": "error"
+        "recommended": true,
+        "useAltText": "error",
+        "useButtonType": "error",
+        "useKeyWithClickEvents": "error"
+      },
+      "security": {
+        "recommended": true,
+        "noDangerouslySetInnerHtml": "error"
+      },
+      "performance": {
+        "recommended": true
       }
     }
   },
@@ -32,12 +48,7 @@
     "indentWidth": 2,
     "lineWidth": 80,
     "formatWithErrors": true,
-    "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
-    "javascript": {
-      "quoteStyle": "single",
-      "trailingComma": "es5",
-      "semicolons": "always"
-    }
+    "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
   },
   "javascript": {
     "formatter": {
